Refs #17143: Create test and update all xmls to pass the tests
Signed-off-by: JesusPoderoso <jesuspoderoso@eprosima.com>

--- a/test/xmlvalidation/CMakeLists.txt
+++ b/test/xmlvalidation/CMakeLists.txt
@@ -37,4 +37,40 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/XMLTesterExample.xml
 
 
 # Check XML profile validation against schema
-add_test(NAME xml.validate COMMAND fastdds xml validate xmldocuments)
+add_test(NAME xml.validate_samples COMMAND fastdds xml validate xmldocuments)
+
+# Check the XML from examples (that follows the xsd schema, avoid static discovery xmls)
+add_test(NAME xml.validate_examples_1 COMMAND fastdds xml validate ../../examples/cpp/dds/DynamicHelloWorldExample)
+add_test(NAME xml.validate_examples_2 COMMAND fastdds xml validate ../../examples/cpp/dds/TypeLookupService)
+
+# Check the XML from tests (that follows the xsd schema, avoid static discovery xmls or bad structured on purpose xmls)
+add_test(NAME xml.validate_tests_blackbox_1 COMMAND fastdds xml validate ../blackbox/discovery_participant_flags.xml)
+add_test(NAME xml.validate_tests_blackbox_2 COMMAND fastdds xml validate ../blackbox/partitions.xml)
+add_test(NAME xml.validate_tests_blackbox_3 COMMAND fastdds xml validate ../blackbox/persistence.xml)
+add_test(NAME xml.validate_tests_blackbox_4 COMMAND fastdds xml validate ../blackbox/StatisticsDomainParticipant.xml)
+add_test(NAME xml.validate_tests_communication COMMAND fastdds xml validate ../communication)
+add_test(NAME xml.validate_tests_dds COMMAND fastdds xml validate ../dds)
+add_test(NAME xml.validate_tests_unittest_1 COMMAND fastdds xml validate ../unittest/dds)
+add_test(NAME xml.validate_tests_unittest_2 COMMAND fastdds xml validate ../unittest/dynamic_types)
+add_test(NAME xml.validate_tests_unittest_3 COMMAND fastdds xml validate ../unittest/xmlparser/log_inactive.xml)
+add_test(NAME xml.validate_tests_unittest_4 COMMAND fastdds xml validate ../unittest/xmlparser/test_xml_profiles.xml)
+add_test(NAME xml.validate_tests_unittest_5 COMMAND fastdds xml validate ../unittest/xmlparser/tls_config.xml)
+add_test(NAME xml.validate_tests_unittest_6 COMMAND fastdds xml validate ../unittest/xmlparser/log_node_file_append.xml)
+add_test(NAME xml.validate_tests_unittest_7 COMMAND fastdds xml validate ../unittest/xmlparser/UDP_transport_descriptors_config.xml)
+add_test(NAME xml.validate_tests_unittest_8 COMMAND fastdds xml validate ../unittest/xmlparser/log_def_file.xml)
+add_test(NAME xml.validate_tests_unittest_9 COMMAND fastdds xml validate ../unittest/xmlparser/log_stdouterr_two_thresholds.xml)
+add_test(NAME xml.validate_tests_unittest_10 COMMAND fastdds xml validate ../unittest/xmlparser/test_xml_profiles_rooted.xml)
+add_test(NAME xml.validate_tests_unittest_11 COMMAND fastdds xml validate ../unittest/xmlparser/test_xml_root_library_settings.xml)
+add_test(NAME xml.validate_tests_unittest_12 COMMAND fastdds xml validate ../unittest/xmlparser/test_xml_duration.xml)
+add_test(NAME xml.validate_tests_unittest_13 COMMAND fastdds xml validate ../unittest/xmlparser/SHM_transport_descriptors_config.xml)
+add_test(NAME xml.validate_tests_unittest_14 COMMAND fastdds xml validate ../unittest/xmlparser/log_stdouterr.xml)
+add_test(NAME xml.validate_tests_unittest_15 COMMAND fastdds xml validate ../unittest/xmlparser/test_xml_security_profiles.xml)
+if(PERFORMANCE_TESTS)
+    add_test(NAME xml.validate_tests_performance COMMAND fastdds xml validate ../performance)
+endif()
+if(PROFILING_TESTS)
+    add_test(NAME xml.validate_tests_profiling COMMAND fastdds xml validate ../profiling)
+endif()
+if(SYSTEM_TESTS)
+    add_test(NAME xml.validate_tests_system COMMAND fastdds xml validate ../system)
+endif()
